<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE project>
<resources>

    <string name="app_name">User Account</string>
    <string name="login_text_view">Login</string>
    <string name="username_edit_text">Username</string>
    <string name="password_edit_text">Password</string>
    <string name="login_button">Login</string>
    <string name="title_user_info">Information about user</string>
    <string name="title_money">Operations with money</string>
    <string name="title_payments">Payments</string>
    <string name="title_withdrawal">Withdrawal</string>
    <string name="title_internet">Internet</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_documents">Documents</string>
    <string name="title_cards">Internet Cards</string>
    <string name="title_support">Technical Support</string>
    <string name="title_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_key_text_view">Login:</string>
    <string name="deposit_key_text_view">Deposit:</string>
    <string name="additional_deposit_key_text_view">Additional Deposit:</string>
    <string name="credit_key_text_view">Credit:</string>
    <string name="credit_date_key_text_view">Date:</string>
    <string name="discount_key_text_view">Discount:</string>
    <string name="discount_date_key_text_view">Date:</string>
    <string name="name_key_text_view">Name:</string>
    <string name="phone_key_text_view">Phone Numer:</string>
    <string name="address_key_text_view">Address:</string>
    <string name="email_key_text_view">E-mail:</string>
    <string name="contract_key_text_view">Contract:</string>
    <string name="contract_date_key_text_view">Date:</string>
    <string name="status_key_text_view">Status:</string>
    <string name="service_key_textview">Service:</string>
    <string name="tariff_key_text_view">Tariff plan:</string>
    <string name="simultaneously_key_text_view">Simultaneously:</string>
    <string name="ip_key_text_view">IP:</string>
    <string name="netmask_key_text_view">Netmask:</string>
    <string name="speed_key_text_view">Speed (Kb):</string>
    <string name="cid_key_text_view">CID:</string>
    <string name="service_status_key_text_view">Status:</string>
    <string name="payment_key_text_view">Periodical Payments:</string>
    <string name="finish_key_text_view">Finish:</string>
    <string name="date_header_text_view">Date</string>
    <string name="description_header_text_view">Description</string>
    <string name="sum_header_text_view">Sum</string>
    <string name="deposit_header_text_view">Deposit</string>
    <string name="type_header_text_view">type</string>
    <string name="overall_key_text_view">Overall:</string>
    <string name="sum_key_text_view">Sum:</string>
    <string name="ip_header_text_view">IP</string>
    <string name="cid_header_text_view">CID</string>
    <string name="duration_header_text_view">Duration</string>
    <string name="received_header_text_view">Received</string>
    <string name="sent_header_text_view">Sent</string>
    <string name="subject_hint_edit_text">Subject</string>
    <string name="chapter_spinner">Chapter</string>
    <string name="message_hint_edit_text">Message</string>
    <string name="browse_button">Browse&#8230;</string>
    <string name="state_spinner">Status</string>
    <string name="priority_spinner">Priority</string>
    <string name="send_button">Send</string>
    <string name="payment_tab">Payments</string>
    <string name="withdrawal_tab">Withdrawal</string>
    <string name="internet_tab">Internet</string>
    <string name="statistics_tab">Statistics</string>
    <string name="low_deposit_ticker">Low deposit</string>
    <string name="warning_title">Warning!</string>
    <string name="switch_notification">Notify when deposit is low</string>
    <string name="critical_deposit_edit_text_hint">Critical deposit level</string>
    <string name="loading_title">Please wait&#8230;</string>
    <string name="loading_message">Loading</string>
    <string name="customer_care_text_view">Customer\'s Care</string>
    <string name="support_phone_number_1">+380 472 540 540</string>
    <string name="technical_support_text_view">Technical Support</string>
    <string name="support_phone_number_2">+380 472 544 010</string>
    <string name="support_phone_number_3">+380 931 771 640</string>
    <string name="logout_button">Exit</string>
    <string name="escape_button">Escape</string>
    <string name="logout_warning">All program\'s data and settings will be erased from the device</string>
    <string name="login_error">Can not login</string>

</resources>
