<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	tools:context="ua.infoshoc.megastyle.UserInfoFragment">       
	<TableLayout
   		android:shrinkColumns="1"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	    
	    <TableRow>
	        <TextView
	            android:text="@string/login_key_text_view"/>
	        <TextView 
	            
	            android:id="@+id/loginTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView		            
	            android:text="@string/deposit_key_text_view"/>
	        <TextView		            
	            android:id="@+id/depositTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView		            
	            android:text="@string/additional_deposit_key_text_view"/>
	        <TextView		            
	            android:id="@+id/additionalDepositTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView		            
	            android:text="@string/credit_key_text_view"/>
	        <TextView 
           		android:id="@+id/creditTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 	         
	            android:text="@string/credit_date_key_text_view"/>
	        <TextView 
	            android:id="@+id/creditDateTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 		            
	            android:text="@string/discount_key_text_view"/>
	        <TextView 		            
	            android:id="@+id/discountTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 		            
	            android:text="@string/discount_date_key_text_view"/>
	        <TextView 
	            android:id="@+id/discountDateTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 		            
	            android:text="@string/name_key_text_view"/>
	        <TextView
	            android:id="@+id/nameTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:text="@string/phone_key_text_view"/>
	        <TextView
	            android:id="@+id/phoneTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView	            
	            android:text="@string/address_key_text_view"/>
	        <TextView 		            
	            android:id="@+id/addressTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 		            
	            android:text="@string/email_key_text_view"/>
	        <TextView
	            android:id="@+id/emailTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:text="@string/contract_key_text_view"/>
	        <TextView
	            android:id="@+id/contractTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:text="@string/contract_date_key_text_view"/>
	        <TextView
	            android:id="@+id/contractDateTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView
	            android:text="@string/status_key_text_view"/>
	        <TextView
	            android:id="@+id/statusTextView"/>
	    </TableRow>
	    <TableRow android:gravity="right" >
	        <TextView 
	            android:id="@+id/serviceNameTextView"/>
	    </TableRow>		    
	    <TableRow
	        android:layout_width="match_parent">
	        <TextView	            
	            android:text="@string/tariff_key_text_view"/>
	        <TextView		            
	            android:id="@+id/tariffTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </TableRow>	
	    <TableRow>
	        <TextView		            
	            android:text="@string/simultaneously_key_text_view"/>
	        <TextView		            
	            android:id="@+id/simultaneouslyTextView"/>
	    </TableRow>	
	    <TableRow>
	        <TextView		            
	            android:text="@string/ip_key_text_view"/>
	        <TextView 
	            
	            android:id="@+id/ipTextView"/>
	    </TableRow>	
	    <TableRow>
	        <TextView		            
	            android:text="@string/netmask_key_text_view"/>
	        <TextView		            
	            android:id="@+id/netmaskTextView"/>
	    </TableRow>	
	    <TableRow>
	        <TextView		            
	            android:text="@string/speed_key_text_view"/>
	        <TextView		            
	            android:id="@+id/speedTextView"/>
	    </TableRow>	
	    <TableRow>
	        <TextView 	            
	            android:text="@string/cid_key_text_view"/>
	        <TextView 		            
	            android:id="@+id/cidTextView"/>
	    </TableRow>	
	    <TableRow>
	        <TextView 		            
	            android:text="@string/service_status_key_text_view"/>
	        <TextView 		            
	            android:id="@+id/serviceStatusTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 		            
	            android:text="@string/finish_key_text_view"/>
	        <TextView 		            
	            android:id="@+id/finishTextView"/>
	    </TableRow>
	    
	</TableLayout>
		
</ScrollView>