<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<TableLayout
	    android:shrinkColumns="1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin">
	    
	    <TableRow android:gravity="right" >
	        <TextView 
	            android:id="@+id/serviceNameTextView"/>
	    </TableRow>
	    <TableRow>
	        <TextView 
				android:text="@string/tariff_key_text_view"/>
	        <TextView 
	            android:id="@+id/tariffTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/simultaneously_key_text_view"/>
	        <TextView 
	            android:id="@+id/simultaneouslyTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/ip_key_text_view"/>
	        <TextView 
	            android:id="@+id/ipTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/netmask_key_text_view"/>
	        <TextView 
	            android:id="@+id/netmaskTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/speed_key_text_view"/>
	        <TextView 
	            android:id="@+id/speedTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/cid_key_text_view"/>
	        <TextView 
	            android:id="@+id/cidTextView"/>
	    </TableRow>	
	    <TableRow >
	        <TextView 
	            android:text="@string/service_status_key_text_view"/>
	        <TextView 
	            android:id="@+id/serviceStatusTextView"/>
	    </TableRow>
	    <TableRow >
	        <TextView 
	            android:text="@string/finish_key_text_view"/>
	        <TextView 
	            android:id="@+id/finishTextView"/>
	    </TableRow>
	    
	</TableLayout>
	
</ScrollView>