<?xml version="1.0" encoding="utf-8"?>
<ua.infoshoc.megastyle.VScroll xmlns:android="http://schemas.android.com/apk/res/android" 
	android:id="@+id/vScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <ua.infoshoc.megastyle.HScroll
        android:id="@+id/hScroll"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">
		
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin">
	
	        <TableLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
	            
		        <TableRow
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:text="@string/ip_header_text_view" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:text="@string/cid_header_text_view" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:text="@string/duration_header_text_view" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:text="@string/received_header_text_view" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:text="@string/sent_header_text_view" />
		
		        </TableRow>
		
				<TableRow
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content" >
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:id="@+id/ipTextView" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:id="@+id/cidTextView" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:id="@+id/durationTextView" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:id="@+id/receivedTextView" />
		
		            <TextView
		                style="@style/statisticsTextView"
		                android:id="@+id/sentTextView" />
		            
				</TableRow>
				
			</TableLayout>
			
	        <TableLayout
	            android:id="@+id/tableLayout"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"/>
	
	    </LinearLayout>
    
	</ua.infoshoc.megastyle.HScroll>
</ua.infoshoc.megastyle.VScroll>